--- a/fisu-app/Base.lproj/Main.storyboard
+++ b/fisu-app/Base.lproj/Main.storyboard
@@ -227,6 +227,24 @@
             </objects>
             <point key="canvasLocation" x="118" y="318"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="gOc-PN-suc">
+            <objects>
+                <viewController id="yQ4-4c-lRf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RKF-uT-SvN"/>
+                        <viewControllerLayoutGuide type="bottom" id="3Xo-06-pod"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vhb-t9-kHc">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nT7-xJ-rcj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="118" y="1085"/>
+        </scene>
     </scenes>
     <resources>
         <image name="blIr42c2.jpg" width="348" height="348"/>
